---
source: crates/papyrus/src/parser.rs
expression: "parse_to_tree(\"\n    let f := 1\n    let s := 1\n    let next\n    for { let i := 0 } lt(i, 10) { i := add(i, 1)}\n    {\n      if lt(i, 2) {\n        mstore(i, 1)\n      }\n      if gt(i, 1) {\n        next := add(s, f)\n        f := s\n        s := next\n        mstore(i, s)\n      }\n    }\")"
---
AST
├╼ declare - f:u256
│ └╼ 1:u256
├╼ declare - s:u256
│ └╼ 1:u256
├╼ declare - next:u256
└╼ for loop
  ├╼ init block
  │ └╼ declare - i:u256
  │   └╼ 0:u256
  ├╼ conditional
  │ └╼ lt(u256, u256): u256
  │   ├╼ var - i:u256
  │   └╼ 10:u256
  ├╼ after block
  │ └╼ assign - i:u256
  │   └╼ add(u256, u256): u256
  │     ├╼ var - i:u256
  │     └╼ 1:u256
  └╼ interior block
    ├╼ if statement
    │ └╼ conditional
    │   ├╼ lt(u256, u256): u256
    │   │ ├╼ var - i:u256
    │   │ └╼ 2:u256
    │   └╼ mstore(u256, u256): u256
    │     ├╼ var - i:u256
    │     └╼ 1:u256
    └╼ if statement
      └╼ conditional
        ├╼ gt(u256, u256): u256
        │ ├╼ var - i:u256
        │ └╼ 1:u256
        ├╼ assign - next:u256
        │ └╼ add(u256, u256): u256
        │   ├╼ var - s:u256
        │   └╼ var - f:u256
        ├╼ assign - f:u256
        │ └╼ var - s:u256
        ├╼ assign - s:u256
        │ └╼ var - next:u256
        └╼ mstore(u256, u256): u256
          ├╼ var - i:u256
          └╼ var - s:u256
